--- a/package.json
+++ b/package.json
@@ -21,6 +21,20 @@
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
     "cytoscape": "^3.5.0",
+    "cytoscape-automove": "^1.10.1",
+    "cytoscape-canvas": "^3.0.1",
+    "cytoscape-cola": "^2.3.0",
+    "cytoscape-cose-bilkent": "^4.0.0",
+    "cytoscape-cxtmenu": "^3.0.2",
+    "cytoscape-dagre": "^2.2.2",
+    "cytoscape-edgehandles": "^3.5.1",
+    "cytoscape-euler": "^1.2.1",
+    "cytoscape-expand-collapse": "^3.1.2",
+    "cytoscape-klay": "^3.1.2",
+    "cytoscape-panzoom": "^2.5.3",
+    "cytoscape-qtip": "^2.7.1",
+    "cytoscape-undo-redo": "^1.3.1",
+    "cytoscape-view-utilities": "^2.2.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
@@ -30,9 +44,10 @@
     "@angular/cli": "~7.3.5",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
+    "@types/cytoscape": "^3.3.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
