--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
   "dependencies": {
     "@angular/animations": "^7.2.11",
     "@angular/cdk": "^7.3.6",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
+    "@angular/common": "^7.2.11",
+    "@angular/compiler": "^7.2.11",
+    "@angular/core": "^7.2.11",
+    "@angular/forms": "^7.2.11",
     "@angular/material": "^7.3.6",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
+    "@angular/platform-browser": "^7.2.11",
+    "@angular/platform-browser-dynamic": "^7.2.11",
+    "@angular/router": "^7.2.11",
     "@ngrx/effects": "^7.3.0",
     "@ngrx/store": "^7.3.0",
     "core-js": "^2.5.4",
-    "cytoscape": "^3.5.0",
+    "cytoscape": "^3.5.1",
     "cytoscape-automove": "^1.10.1",
     "cytoscape-canvas": "^3.0.1",
     "cytoscape-cola": "^2.3.0",
@@ -36,20 +36,24 @@
     "cytoscape-expand-collapse": "^3.1.2",
     "cytoscape-klay": "^3.1.2",
     "cytoscape-panzoom": "^2.5.3",
+    "cytoscape-popper": "^1.0.4",
     "cytoscape-qtip": "^2.7.1",
     "cytoscape-undo-redo": "^1.3.1",
     "cytoscape-view-utilities": "^2.2.0",
     "hammerjs": "^2.0.8",
+    "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
+    "tippy.js": "^4.2.1",
     "tslib": "^1.9.0",
+    "webcola": "^3.3.9",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.5",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
-    "@types/cytoscape": "^3.3.0",
+    "@angular-devkit/build-angular": "^0.13.7",
+    "@angular/cli": "^7.3.7",
+    "@angular/compiler-cli": "^7.2.11",
+    "@angular/language-service": "^7.2.11",
+    "@types/cytoscape": "^3.4.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
