Cola.js gene-gene graph 예제 오류 수정

--- a/angular.json
+++ b/angular.json
@@ -28,12 +28,26 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/tippy.js/umd/index.all.js",
-              "node_modules/cytoscape/dist/cytoscape.min.js",
+              "node_modules/lodash/lodash.min.js",
               "node_modules/webcola/WebCola/cola.min.js",
+              "node_modules/tippy.js/dist/tippy.all.min.js",
+              "node_modules/popper.js/dist/umd/popper.js",
+              "node_modules/cytoscape/dist/cytoscape.min.js",
+              "node_modules/cytoscape-automove/cytoscape-automove.js",
+              "node_modules/cytoscape-canvas/dist/cytoscape-canvas.js",
               "node_modules/cytoscape-cola/cytoscape-cola.js",
-              "node_modules/popper.js/dist/umd/popper.min.js",
-              "node_modules/cytoscape-popper/cytoscape-popper.js"
+              "node_modules/cytoscape-cose-bilkent/cytoscape-cose-bilkent.js",
+              "node_modules/cytoscape-cxtmenu/cytoscape-cxtmenu.js",
+              "node_modules/cytoscape-cose-bilkent/cytoscape-cose-bilkent.js",
+              "node_modules/cytoscape-edgehandles/cytoscape-edgehandles.js",
+              "node_modules/cytoscape-euler/cytoscape-euler.js",
+              "node_modules/cytoscape-expand-collapse/cytoscape-expand-collapse.js",
+              "node_modules/cytoscape-klay/cytoscape-klay.js",
+              "node_modules/cytoscape-panzoom/cytoscape-panzoom.js",
+              "node_modules/cytoscape-popper/cytoscape-popper.js",
+              "node_modules/cytoscape-undo-redo/cytoscape-undo-redo.js",
+              "node_modules/cytoscape-qtip/cytoscape-qtip.js",
+              "node_modules/cytoscape-view-utilities/cytoscape-view-utilities.js"
             ],
             "es5BrowserSupport": true
           },
