--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "cytoscape-undo-redo": "^1.3.1",
     "cytoscape-view-utilities": "^2.2.0",
     "hammerjs": "^2.0.8",
+    "lodash": "^4.17.11",
+    "ng-tippy": "^3.2.2",
     "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
-    "tippy.js": "^4.2.1",
+    "tippy.js": "^2.6.0",
     "tslib": "^1.9.0",
     "webcola": "^3.3.9",
     "zone.js": "~0.8.26"
@@ -56,6 +58,8 @@
     "@types/cytoscape": "^3.4.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.29",
+    "@types/lodash": "^4.14.123",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
