--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cytoscape-panzoom": "^2.5.3",
     "cytoscape-popper": "^1.0.4",
     "cytoscape-qtip": "^2.7.1",
+    "cytoscape-spread": "^3.0.0",
     "cytoscape-undo-redo": "^1.3.1",
     "cytoscape-view-utilities": "^2.2.0",
     "hammerjs": "^2.0.8",
@@ -47,6 +48,7 @@
     "rxjs": "~6.3.3",
     "tippy.js": "^2.6.0",
     "tslib": "^1.9.0",
+    "weaverjs": "^1.2.0",
     "webcola": "^3.3.9",
     "zone.js": "~0.8.26"
   },
