--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cytoscape-spread": "^3.0.0",
     "cytoscape-undo-redo": "^1.3.1",
     "cytoscape-view-utilities": "^2.2.0",
+    "dagre": "^0.8.4",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.11",
     "ng-tippy": "^3.2.2",
