--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,7 @@
               "node_modules/cytoscape/dist/cytoscape.min.js",
               "node_modules/weaverjs/dist/weaver.min.js",
               "node_modules/dagre/dist/dagre.min.js",
+              "node_modules/klayjs/klay.js",
               "node_modules/cytoscape-automove/cytoscape-automove.js",
               "node_modules/cytoscape-canvas/dist/cytoscape-canvas.js",
               "node_modules/cytoscape-cola/cytoscape-cola.js",
