--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cytoscape-view-utilities": "^2.2.0",
     "dagre": "^0.8.4",
     "hammerjs": "^2.0.8",
+    "klayjs": "^0.4.1",
     "lodash": "^4.17.11",
     "ng-tippy": "^3.2.2",
     "popper.js": "^1.14.7",
